finalize ndvi latex report

--- a/25_projet_data_scientist/3_ndvi/biblio.bib
+++ b/25_projet_data_scientist/3_ndvi/biblio.bib
@@ -261,3 +261,9 @@ wiki:utm,
     year = {2009},
     url = {http://qgis.osgeo.org},
 }
+
+@misc{insee,
+   author = {INSEE},
+   title = {Une nouvelle approche du territoire : densité de population et accessibilité aux services},
+   howpublished = "\url{http://www.insee.fr/fr/themes/document.asp?reg_id=6ref_id=23678}"
+}
