update ndvi classification latex report

--- a/25_projet_data_scientist/4_classification/biblio.bib
+++ b/25_projet_data_scientist/4_classification/biblio.bib
@@ -273,3 +273,9 @@ wiki:utm,
 	year={2006},
 	url={https://geopy.readthedocs.io/en/1.10.0/#a}
 }
+
+@misc{insee_pop2013,
+	title={Données harmonisées des recensements de la population à partir de 1968},
+	year={2016},
+	url={http://www.insee.fr/fr/ppp/bases-de-donnees/recensement/populations-legales/pages2015/zip/HIST_POP_COM_RP13.zip}
+}
