update ndvi classification latex report

--- a/25_projet_data_scientist/4_classification/classification.tex
+++ b/25_projet_data_scientist/4_classification/classification.tex
@@ -283,6 +283,19 @@ Ainsi, en arrondissant ces valeurs, on créé 5 catégories pour nos échantillo
 \end{description}
 \clearpage
 
+Un tel découpage donne lieu à un distribution avec une grande disproportion entre les catégories, ce qui peut potentiellement perturber certains algorithmes de classification :\\
+\begin{description}
+ \item[catégorie 1:] 20 échantillons
+ \item[catégorie 2:] 102 échantillons
+ \item[catégorie 3:] 286 échantillons
+ \item[catégorie 4:] 1287 échantillons
+ \item[catégorie 5:] 34443 échantillons
+\end{description}
+
+
+
+
+
 D'où le nouveau tableau obtenu en tenant compte cette fois de la catégorie comme variable à prédire \ref{data_class}:\\
 \begin{table}[H]
 \begin{center}
